feat: adiciona validação de ator já cadastrado a classe ServicoAtor